# fit2004-a2

./: README.md  pyproject.toml
task1/: main.py
task2/: main.py  test_main.py
