[tool.poetry]
name = "a2"
version = "0.1.0"
description = ""
authors = ["Minh Khoi Nguyen <mngu0115@student.monash.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
